[gd_scene load_steps=20 format=3 uid="uid://b6to2tvnullyb"]

[ext_resource type="Theme" uid="uid://b3er4y6isfbo8" path="res://Assets/Botões_personalizado.tres" id="1_06tow"]
[ext_resource type="Texture2D" uid="uid://bupykjkhpcvc5" path="res://Assets/Cena de fundo das perguntas.png" id="1_oaxax"]
[ext_resource type="Texture2D" uid="uid://c5naqyenxb7vm" path="res://Assets/FRENTE - Cena de fundo das perguntas.png" id="2_06tow"]
[ext_resource type="Script" uid="uid://d11gt1tvi6ipo" path="res://Scripts/Jogo.gd" id="2_nlxp7"]
[ext_resource type="Texture2D" uid="uid://pjltglkw411h" path="res://Animações/Frame_0043.png" id="4_g4kj3"]
[ext_resource type="Texture2D" uid="uid://cfcbsy5jonasf" path="res://Animações/Frame_0044.png" id="5_3m8v0"]
[ext_resource type="Texture2D" uid="uid://ccci5c18de1p0" path="res://Animações/Frame_0045.png" id="6_nkcmr"]
[ext_resource type="Texture2D" uid="uid://bwwnxcfadwyno" path="res://Animações/Frame_0046.png" id="7_kiki3"]
[ext_resource type="Texture2D" uid="uid://mg4yp785i88h" path="res://Animações/Frame_0047.png" id="8_ok1d5"]
[ext_resource type="Texture2D" uid="uid://b0jbw6ncyh03j" path="res://Animações/Frame_0048.png" id="9_xea45"]
[ext_resource type="Texture2D" uid="uid://drmm0wlh2yy30" path="res://Animações/Frame_0049.png" id="10_rk8jn"]
[ext_resource type="Texture2D" uid="uid://b1di6wberrf6p" path="res://Animações/Frame_0050.png" id="11_sg4pm"]
[ext_resource type="Texture2D" uid="uid://dibi6lojdxn5i" path="res://Animações/Frame_0051.png" id="12_to7s4"]
[ext_resource type="Texture2D" uid="uid://cd1k4wro8e580" path="res://Animações/Frame_0052.png" id="13_cb73q"]
[ext_resource type="Texture2D" uid="uid://skb1h7gwqskj" path="res://Animações/Frame_0053.png" id="14_4wtgg"]
[ext_resource type="Texture2D" uid="uid://dt6x20hj75a5i" path="res://Assets/bar_round_gloss_large.png" id="16_2xg7b"]
[ext_resource type="Texture2D" uid="uid://n4c4m6f8dd7v" path="res://Assets/bar_round_gloss_largered.png" id="17_kvaim"]

[sub_resource type="SpriteFrames" id="SpriteFrames_n17d0"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": ExtResource("4_g4kj3")
}, {
"duration": 3.0,
"texture": ExtResource("5_3m8v0")
}, {
"duration": 1.0,
"texture": ExtResource("6_nkcmr")
}, {
"duration": 1.0,
"texture": ExtResource("7_kiki3")
}, {
"duration": 5.0,
"texture": ExtResource("8_ok1d5")
}, {
"duration": 1.0,
"texture": ExtResource("7_kiki3")
}, {
"duration": 8.0,
"texture": ExtResource("5_3m8v0")
}],
"loop": true,
"name": &"Apontando",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_xea45")
}, {
"duration": 2.0,
"texture": ExtResource("10_rk8jn")
}, {
"duration": 2.0,
"texture": ExtResource("11_sg4pm")
}, {
"duration": 1.0,
"texture": ExtResource("11_sg4pm")
}, {
"duration": 6.0,
"texture": ExtResource("12_to7s4")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}, {
"duration": 1.0,
"texture": ExtResource("13_cb73q")
}, {
"duration": 1.0,
"texture": ExtResource("14_4wtgg")
}],
"loop": true,
"name": &"Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_g4kj3")
}],
"loop": true,
"name": &"Parado",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n17d0"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Node2D" type="Node2D"]

[node name="Jogo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_06tow")
script = ExtResource("2_nlxp7")

[node name="TextureRect" type="TextureRect" parent="Jogo"]
modulate = Color(0.489622, 0.489622, 0.489622, 1)
layout_mode = 0
offset_left = -4.0
offset_top = -38.0
offset_right = 1160.0
offset_bottom = 712.0
texture = ExtResource("1_oaxax")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Jogo"]
position = Vector2(331.5, 366)
scale = Vector2(0.232292, 0.2375)
sprite_frames = SubResource("SpriteFrames_n17d0")
animation = &"Apontando"
frame_progress = 0.183261

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Jogo"]
position = Vector2(802, 358)
scale = Vector2(0.227552, 0.225039)
sprite_frames = SubResource("SpriteFrames_n17d0")
animation = &"Manfred"
frame_progress = 0.505197

[node name="TextureRect2" type="TextureRect" parent="Jogo"]
modulate = Color(0.489622, 0.489622, 0.489622, 1)
layout_mode = 0
offset_left = -4.0
offset_top = -38.0
offset_right = 1160.0
offset_bottom = 712.0
texture = ExtResource("2_06tow")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Jogo"]
layout_mode = 0
offset_left = 414.0
offset_top = 50.0
offset_right = 748.0
offset_bottom = 265.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n17d0")

[node name="VBoxContainer" type="VBoxContainer" parent="Jogo"]
layout_mode = 0
offset_left = 449.0
offset_top = 298.0
offset_right = 708.0
offset_bottom = 449.0

[node name="Button" type="Button" parent="Jogo/VBoxContainer"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="Jogo/VBoxContainer"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="Jogo/VBoxContainer"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="Jogo/VBoxContainer"]
layout_mode = 2
text = "4"

[node name="Anterior" type="Button" parent="Jogo"]
layout_mode = 0
offset_left = 422.0
offset_top = 267.0
offset_right = 487.0
offset_bottom = 293.0
text = "Anterior"

[node name="Proximo" type="Button" parent="Jogo"]
layout_mode = 0
offset_left = 685.0
offset_top = 267.0
offset_right = 746.0
offset_bottom = 293.0
text = "Proximo"

[node name="Menu" type="Button" parent="Jogo"]
layout_mode = 0
offset_left = 523.0
offset_top = 314.0
offset_right = 634.0
offset_bottom = 340.0
text = "Menu principal"

[node name="RichTextLabel" type="RichTextLabel" parent="Jogo"]
layout_mode = 0
offset_left = 421.0
offset_top = 57.0
offset_right = 741.0
offset_bottom = 257.0
bbcode_enabled = true
text = "test"

[node name="phoenix" type="TextureProgressBar" parent="Jogo"]
layout_mode = 0
offset_left = 247.0
offset_top = 232.0
offset_right = 343.0
offset_bottom = 256.0
value = 100.0
texture_progress = ExtResource("16_2xg7b")

[node name="Manfred" type="TextureProgressBar" parent="Jogo"]
layout_mode = 0
offset_left = 797.0
offset_top = 235.0
offset_right = 893.0
offset_bottom = 259.0
value = 100.0
texture_progress = ExtResource("17_kvaim")

[connection signal="pressed" from="Jogo/VBoxContainer/Button" to="Jogo" method="_on_alternativa1_button_pressed"]
[connection signal="pressed" from="Jogo/VBoxContainer/Button2" to="Jogo" method="_on_alternativa2_button_2_pressed"]
[connection signal="pressed" from="Jogo/VBoxContainer/Button3" to="Jogo" method="_on_alternativa3_button_3_pressed"]
[connection signal="pressed" from="Jogo/VBoxContainer/Button4" to="Jogo" method="_on_alternativa4_button_4_pressed"]
[connection signal="pressed" from="Jogo/Anterior" to="Jogo" method="_on_anterior_pressed"]
[connection signal="pressed" from="Jogo/Proximo" to="Jogo" method="_on_proximo_pressed"]
[connection signal="pressed" from="Jogo/Menu" to="Jogo" method="_on_menu_pressed"]
